# sassena

./: CMakeLists.txt  README
build.env/: jaguar-xt5.sh  kraken-xt5.sh  lens.sh  moldyn.sh  viper.sh
cmake/: CMakeLists.txt.depends  CMakeLists.txt.executables  CMakeLists.txt.intern  CMakeLists.txt.packages  CMakeLists.txt.shared  CMakeLists.txt.static  CMakeLists.txt.version  CmakeLists.txt.vendors  SassenaConfig.hpp.in
cmake/modules/: FindConfig.cmake  FindFFTW3.cmake  FindGSL.cmake  FindHDF5.cmake
contrib/db/: atom_masses.conf  atom_names.conf  excluded_volumes.conf  scattering_factors.conf
include/: analysis.hpp  atom.hpp  atoms.hpp  atomselection.hpp  atomselections.hpp  background_analyzer.hpp  common.hpp  control.hpp  coor3d.hpp  coordinate_set.hpp  coordinate_sets.hpp  database.hpp  decomposition_plan.hpp  density_grid.hpp  frame.hpp  frames.hpp  geometry.hpp  grid.hpp  log.hpp  motion_walker.hpp  parameters.hpp  particle_trajectory.hpp  performance_analyzer.hpp  progress_reporter.hpp  sample.hpp  scatter_devices.hpp  scatter_factors.hpp  scatter_spectrum.hpp  scatter_spectrum_writer.hpp  scatterdata.hpp  services.hpp  settings.hpp  smath.hpp  tasks.hpp  timer.hpp  vector_unfold.hpp  xml_interface.hpp
include/boost/: README
include/control/: database.hpp  log.hpp  parameters.hpp
include/decomposition/: assignment.hpp  decompose.hpp  decomposition_plan.hpp
include/exceptions/: exceptions.hpp
include/io/: xml_interface.hpp
include/io/xdrfile/: xdrfile_trr.h
include/log/: log.hpp
include/math/: coor3d.hpp  geometry.hpp  smath.hpp
include/measures/: center_of_mass.hpp
include/mpi/: wrapper.hpp
include/report/: performance_analyzer.hpp  progress_reporter.hpp  timer.hpp
include/sample/: atom.hpp  atoms.hpp  atomselection.hpp  atomselection_reader.hpp  atomselections.hpp  center_of_mass.hpp  coordinate_set.hpp  coordinate_sets.hpp  frame.hpp  frames.hpp  frameset_index.hpp  motion_walker.hpp  sample.hpp
include/scatter_devices/: abstract_scatter_device.hpp  abstract_vectors_scatter_device.hpp  all.hpp  all_exact.hpp  all_multipole.hpp  all_multipole_cylinder.hpp  all_multipole_sphere.hpp  all_vectors.hpp  all_vectors_scatter_device.hpp  all_vectorsthread.hpp  data_stager.hpp  multipole_scatter_device.hpp  particle_trajectory.hpp  scatter_device.hpp  scatter_device_factory.hpp  scatter_factors.hpp  scatter_spectrum.hpp  self_vectors.hpp  self_vectors_scatter_device.hpp  self_vectorsthread.hpp
include/scatter_devices/io/: h5_fqt_interface.hpp
include/services/: file_writer_service.hpp  monitor_service.hpp
include/stager/: coordinate_writer.hpp  data_stager.hpp
include/xdrfile/: xdrfile.h  xdrfile_xtc.h
src/: analysis.cpp  atom.cpp  atoms.cpp  atomselection.cpp  background_analyzer.cpp  common.cpp  coor3d.cpp  coordinate_set.cpp  coordinate_sets.cpp  database.cpp  decompose.cpp  decomposition_plan.cpp  density_grid.cpp  frame.cpp  frames.cpp  grid.cpp  log.cpp  motion_walker.cpp  parameters.cpp  performance_analyzer.cpp  progress_reporter.cpp  sample.cpp  sassena.cpp  scatter_devices.cpp  scatter_factors.cpp  scatter_spectrum.cpp  scatterdata.cpp  settings.cpp  tasks.cpp  timer.cpp  vector_unfold.cpp  xml_interface.cpp
src/control/: database.cpp  log.cpp  parameters.cpp
src/decomposition/: assignment.cpp  decompose.cpp  decomposition_plan.cpp
src/fftw/: fftw++.cc
src/io/: xml_interface.cpp
src/io/xdrfile/: xdrfile.c
src/log/: log.cpp
src/main/: s_cofm.cpp  s_coordump.cpp  s_dumpcontrol.cpp  s_fqt2h5gif.cpp  s_fqt2sqw.cpp  s_genconf.cpp  s_maketnx.cpp  s_savesample.cpp  s_sqw.cpp  s_stage.cpp  sassena.cpp
src/math/: coor3d.cpp  smath.cpp
src/measures/: center_of_mass.cpp
src/mpi/: wrapper.cpp
src/report/: performance_analyzer.cpp  progress_reporter.cpp  timer.cpp
src/sample/: atom.cpp  atoms.cpp  atomselection.cpp  atomselection_reader.cpp  atomselections.cpp  center_of_mass.cpp  coordinate_set.cpp  coordinate_sets.cpp  frame.cpp  frames.cpp  frameset_index.cpp  motion_walker.cpp  sample.cpp
src/scatter_devices/: abstract_scatter_device.cpp  abstract_vectors_scatter_device.cpp  all.cpp  all_exact.cpp  all_multipole.cpp  all_multipole_cylinder.cpp  all_multipole_sphere.cpp  all_vectors.cpp  all_vectors_scatter_device.cpp  all_vectorsthread.cpp  data_stager.cpp  multipole_scatter_device.cpp  scatter_device_factory.cpp  scatter_factors.cpp  scatter_spectrum.cpp  self_vectors.cpp  self_vectors_scatter_device.cpp  self_vectorsthread.cpp
src/scatter_devices/io/: h5_fqt_interface.cpp
src/services/: file_writer_service.cpp  monitor_service.cpp
src/stager/: coordinate_writer.cpp  data_stager.cpp
tests/: unit_boostmpi.cpp  unit_broadcast.cpp  unit_coor3d.cpp  unit_exp.cpp  unit_libconfig.cpp  unit_mpicollectives.cpp  unit_randomnumbers.cpp  unit_ranklogic.cpp  unit_sasstest.cpp  unit_serialize.cpp  unit_serializestatic.cpp  unit_settings.cpp  unit_singlescatter.cpp  unit_triangulation.cpp
tools/: grid.cpp  grid_frames.cpp  map.cpp  normalize.cpp  sassconf.cpp
